updated angular app

--- a/src/app/git-form/git-form.component.html
+++ b/src/app/git-form/git-form.component.html
@@ -1,8 +1,4 @@
-<form action="">
-    <div class="">
-        <!-- <div class="col-md12">
-            <input type="text" class ="form-control" {{ngModel}}="username" name ="username"> -->
-            <button type="submit" class = "btn btn-outline-success btn-lg">Get github user</button>
-        </div>
-    </div>
+<form (ngSubmit)='submitUsername()'>
+    <input type="text" name="" class="form-control" placeholder="Enter Github Username">
+    <button class = "btn btn-primary">Fetch GitHub Data</button>
 </form>
