--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,19 @@
-
-
-
 <div class="container">
     <div class="row">
         <div class="col md-6">
-            <p>welcome to my portfolio</p>
-            <a class="btn btn-outline-warning btn-sm" routerlink = "./gitForm" routerLinkActive='active'>CreateUsername</a>
-            <a class="btn btn-outline-warning btn-sm" routerlink ="./gitResult" routerLinkActive='active'>Search</a>
-            <router-outlet></router-outlet>
+             <p>welcome to my portfolio</p>
+             <a class="btn btn-outline-warning btn-sm" routerlink = "./gitForm" routerLinkActive='active'>GitHub Username</a>
+            <a class="btn btn-outline-warning btn-sm" routerlink ="./gitResult" routerLinkActive='active'>Repositories</a> 
+             <router-outlet></router-outlet> 
 
-            <!-- search button -->
-                <app-git-form></app-git-form>
+             
+                <app-git-form></app-git-form> 
                 <app-git-result></app-git-result>
-            <!-- delelelelle -->
+            
+           
         </div>
     </div>
 </div>
+
+
+
