--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col md-6">
-             <p>welcome to my portfolio</p>
+             <p > Welcome to My GitHub Search APP</p>
              <a class="btn btn-outline-warning btn-sm" routerlink = "./gitForm" routerLinkActive='active'>GitHub Username</a>
             <a class="btn btn-outline-warning btn-sm" routerlink ="./gitResult" routerLinkActive='active'>Repositories</a> 
              <router-outlet></router-outlet> 
