--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <div class="container">
     <div class="row">
-        <div class="col md-6">
-             <p > Welcome to My GitHub Search APP</p>
+        <div class="col-md-6">
+            <p > Welcome to My GitHub Search APP</p>
+            <p>This app will help you to be able to search for Github account using username and also repo name.</p>
+            <p>Enjoy as yo us the app</p>
+        </div>
+        <div class="col-md-6">
+  
              <a class="btn btn-outline-warning btn-sm" routerlink = "./gitForm" routerLinkActive='active'>GitHub Username</a>
             <a class="btn btn-outline-warning btn-sm" routerlink ="./gitResult" routerLinkActive='active'>Repositories</a> 
              <router-outlet></router-outlet> 
