--- a/src/app/git-form/git-form.component.html
+++ b/src/app/git-form/git-form.component.html
@@ -1,4 +1,13 @@
-<form (ngSubmit)='submitUsername()'>
-    <input type="text" name="" class="form-control" placeholder="Enter Github Username">
-    <button class = "btn btn-primary">Fetch GitHub Data</button>
-</form>
+<div class = "container">
+    <div class ="row">
+        <div class="col-sm-5">
+            <form (ngSubmit)='submitUsername()'>
+                <input type="text" name="" class="form-control" placeholder="Enter Github Username">
+                <button class = "btn btn-primary">Fetch GitHub Data</button>
+            </form>
+              
+        </div>
+    </div>
+</div>
+        
+
