--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
 body{
-    background-image : url('assets/github2.jpeg');
-    background-repeat : no-repeat;
-    background-size: cover;
+  background-image:url(./assets/github.png) ;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
